syntax = "proto3";

import "google/protobuf/empty.proto";
import "Protos/EssentialData/Common.proto";


option csharp_namespace = "DawnQuant.AShare.Api.EssentialData";

package DawnQuant.AShare.Api.EssentialData;


//龙头股
service FutureEventOfSubjectApi {
  
//保存龙头股
  rpc SaveFutureEventsOfSubject(SaveFutureEventsOfSubjectRequest) returns (google.protobuf.Empty);
 
}


message SaveFutureEventsOfSubjectRequest
{
    repeated  FutureEventOfSubjectDto Entities=1;
}













